--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,7 @@
                 <li>Menu</li>
                 <li>About</li>
                 <li>Contact</li>
+                <li>cool</li>
             </ul>
         </nav>
     </body>
