--- a/page1.html
+++ b/page1.html
@@ -11,6 +11,7 @@
                 <li>About</li>
                 <li>Contact</li>
                 <li>cool</li>
+                <li>coool</li>
             </ul>
         </nav>
     </body>
