--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1</title>
         <link rel="stylesheet" href="styles1.css">
     </head>
@@ -7,10 +9,15 @@
         <nav>
             <ul class="top-sec">
                 <li style="margin-left: 50px;"><a href="page1.html">Home</a></li>
-                <li>Menu</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
+        <div class="picture">
+            <div class="arrow"><div class="shape right"></div></div>
+            <div class="pic_img"></div>
+            <div class="arrow"><div class="shape left"></div></div>
+        </div>
     </body>
 </html>
