--- a/page1.html
+++ b/page1.html
@@ -19,5 +19,6 @@
             <div class="pic_img"></div>
             <div class="arrow"><div class="shape left"></div></div>
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
