--- a/page1.html
+++ b/page1.html
@@ -15,13 +15,13 @@
             </ul>
         </nav>
         <div class="picture">
-            <div class="arrow"><div class="shape right"></div></div>
+            <div class="arrow" onclick="nextSlide(-1)"><div class="shape right"></div></div>
             <div class="pic_img">
-                <img id="seb1" src="img/seb1.png" alt="seb1">
-                <img id="seb2" src="img/seb2.png" alt="seb2">
-                <img id="seb3" src="img/seb3.png" alt="seb3">
+                <img class="img-seb" id="seb1" src="img/seb1.png" alt="seb1">
+                <img class="img-seb" id="seb2" src="img/seb2.png" alt="seb2">
+                <img class="img-seb" id="seb3" src="img/seb3.png" alt="seb3">
             </div>
-            <div class="arrow"><div class="shape left"></div></div>
+            <div class="arrow" onclick="nextSlide(+1)"><div class="shape left"></div></div>
         </div>
         <script src="main.js"></script>
     </body>
