--- a/page1.html
+++ b/page1.html
@@ -9,19 +9,19 @@
         <nav>
             <ul class="top-sec">
                 <li style="margin-left: 50px;"><a href="page1.html">Home</a></li>
-                <li><a href="">Menu</a></li>
+                <li><a>Menu</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
         <div class="picture">
-            <div class="arrow" onclick="nextSlide(-1)"><div class="shape right"></div></div>
+            <div class="arrowBase btnLeft" onclick="nextSlide(-1)"><div class="shape right"></div></div>
             <div class="pic_img">
-                <img class="img-seb" id="seb1" src="img/seb1.png" alt="seb1">
-                <img class="img-seb" id="seb2" src="img/seb2.png" alt="seb2">
-                <img class="img-seb" id="seb3" src="img/seb3.png" alt="seb3">
+                <img style="display: none;" class="img-seb" id="seb1" src="img/seb1.png" alt="seb1">
+                <img style="display: none;" class="img-seb" id="seb2" src="img/seb2.png" alt="seb2">
+                <img style="display: none;" class="img-seb" id="seb3" src="img/seb3.png" alt="seb3">
             </div>
-            <div class="arrow" onclick="nextSlide(+1)"><div class="shape left"></div></div>
+            <div class="arrowBase btnRight" onclick="nextSlide(1)"><div class="shape left"></div></div>
         </div>
         <script src="main.js"></script>
     </body>
