--- a/page1.html
+++ b/page1.html
@@ -17,9 +17,10 @@
         <div class="picture">
             <div class="arrowBase btnLeft" onclick="nextSlide(-1)"><div class="shape right"></div></div>
             <div class="pic_img">
-                <img style="display: none;" class="img-seb" id="seb1" src="img/seb1.png" alt="seb1">
+                <img style="display: block;" class="img-seb" id="seb1" src="img/seb1.png" alt="seb1">
                 <img style="display: none;" class="img-seb" id="seb2" src="img/seb2.png" alt="seb2">
                 <img style="display: none;" class="img-seb" id="seb3" src="img/seb3.png" alt="seb3">
+                <div class="dots">dots</div>
             </div>
             <div class="arrowBase btnRight" onclick="nextSlide(1)"><div class="shape left"></div></div>
         </div>
